objects/Qualification_History__c.object
<CustomObject>
  <fullName>Qualification_History__c</fullName>
  <label>Qualification History</label>
  <pluralLabel>Qualification Histories</pluralLabel>
  <nameField>
    <label>Qualification History Name</label>
    <type>AutoNumber</type>
    <displayFormat>QH-{0000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
  <fields>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
  </fields>
  <fields>
    <fullName>Qualification_Date__c</fullName>
    <label>Qualification Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Qualification_Status__c</fullName>
    <label>Qualification Status</label>
    <type>Picklist</type>
    <picklist>
      <picklistValues>
        <fullName>New</fullName>
      </picklistValues>
      <picklistValues>
        <fullName>Qualified</fullName>
      </picklistValues>
      <picklistValues>
        <fullName>Unqualified</fullName>
      </picklistValues>
    </picklist>
  </fields>
</CustomObject>